// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Errors render correctly No errors 1`] = `
<div
  className="game__mistakes"
/>
`;

exports[`Should Errors render correctly With one error 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;
